--- a/MauiLabs.View/Pages/RecipePages/CommentsListPage.xaml
+++ b/MauiLabs.View/Pages/RecipePages/CommentsListPage.xaml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiLabs.View.Pages.RecipePages.RecipesListPage"
+             x:Class="MauiLabs.View.Pages.RecipePages.CommentsListPage"
              xmlns:custom="clr-namespace:MauiLabs.View.Commons.ContentViews"
              xmlns:system="clr-namespace:System;assembly=netstandard"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             Title="Список рецептов" 
-             Shell.BackgroundColor="{x:StaticResource Key=FirstColor}">
+             Title="Список комментариев" x:Name="CommentsPage"
+             Shell.BackgroundColor="{x:StaticResource Key=FirstColor}"
+             Shell.FlyoutBehavior="Disabled">
     <ContentPage.Resources>
-        <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
-        <Style x:Key="PageButtonStyle" TargetType="Button">
-            <Setter Property="BackgroundColor" Value="{x:StaticResource FirstColor}"/>
-            <Setter Property="TextColor" Value="White"/>
-            <Setter Property="BorderColor" Value="White"/>
-            <Setter Property="BorderWidth" Value="2"/>
-            <Setter Property="CornerRadius" Value="10"/>
-            <Setter Property="HeightRequest" Value="40"/>
-            <Setter Property="FontSize" Value="18"/>
-            <Setter Property="Margin" Value="10, 0"/>
-        </Style> 
+        <ResourceDictionary>
+            <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+            <toolkit:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageConverter" />
+            <Style x:Key="TextFieldStyle" TargetType="Entry">
+                <Setter Property="PlaceholderColor" Value="{x:StaticResource Key=FirstColor}"/>
+                <Setter Property="BackgroundColor" Value="White" />
+                <Setter Property="FontSize" Value="18" />
+                <Setter Property="TextColor" Value="{x:StaticResource Key=SecondColor}" />
+            </Style>
+            <Style x:Key="TextFieldLabelStyle" TargetType="Label">
+                <Setter Property="BackgroundColor" Value="Transparent" />
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="FontSize" Value="14" />
+            </Style>
+            <Style x:Key="PageButtonStyle" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{x:StaticResource FirstColor}"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="BorderColor" Value="White"/>
+                <Setter Property="BorderWidth" Value="2"/>
+                <Setter Property="CornerRadius" Value="10"/>
+                <Setter Property="HeightRequest" Value="40"/>
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="Margin" Value="10, 0"/>
+            </Style>
+        </ResourceDictionary>
     </ContentPage.Resources>
     <Grid>
         <Image Source="background.png" Aspect="AspectFill"/>
@@ -28,61 +43,63 @@
                     <RoundRectangle CornerRadius="0, 0, 24, 24" />
                 </Border.StrokeShape>
                 <VerticalStackLayout Spacing="5">
-                    <Label TextColor="White" FontSize="14" Text="Параметры поиска:" TextDecorations="Underline"/>
-                    <ScrollView Orientation="Vertical" HeightRequest="96" VerticalScrollBarVisibility="Always">
-                        <Grid ColumnDefinitions="*, *" RowDefinitions="*, *" ColumnSpacing="10" RowSpacing="10">
-                            <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" ColumnDefinitions="0.8*, 0.2*" ColumnSpacing="10">
-                                <Border Stroke="White" Padding="2" BackgroundColor="White" Grid.Column="0">
-                                    <Border.StrokeShape>
-                                        <RoundRectangle CornerRadius="10"/>
-                                    </Border.StrokeShape>
-                                    <Entry PlaceholderColor="{x:StaticResource FirstColor}" TextColor="{x:StaticResource SecondColor}" 
-                                        FontSize="16" Placeholder="Введите название рецепта" BackgroundColor="White" ClearButtonVisibility="WhileEditing"
-                                        Text="{x:Binding TextFilter}" x:Name="FilterTextField" MaxLength="50" Completed="FilterTextField_Completed"
-                                        IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"/>
-                                </Border>
-                                <ImageButton Grid.Column="1" Source="reloadicon.png" BorderColor="White" CornerRadius="10" BorderWidth="2" Grid.Row="1"
-                                    Padding="8" HeightRequest="{OnIdiom Desktop=40, Phone=50}" 
-                                    BackgroundColor="{x:StaticResource FirstColor}" x:Name="ReloadButton" Clicked="ReloadButton_Clicked"
-                                    IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}"/>
+                    <ScrollView Orientation="Vertical" HeightRequest="120" VerticalScrollBarVisibility="Always">
+                        <Grid ColumnDefinitions="0.8*, 0.2*" RowDefinitions="*, *" ColumnSpacing="10">
+                            <!--<Border Stroke="White" Padding="2" BackgroundColor="White" Grid.Column="0">
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="10"/>
+                                </Border.StrokeShape>
+                                <Entry PlaceholderColor="{x:StaticResource FirstColor}" TextColor="{x:StaticResource SecondColor}" 
+                                    FontSize="16" Placeholder="Введите комментарий" BackgroundColor="White" ClearButtonVisibility="WhileEditing"
+                                    Text="{x:Binding TextFilter}" x:Name="FilterTextField" MaxLength="50"
+                                    IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference CommentsPage}}"/>
+                            </Border>-->
+                            <custom:ValidationEntryView ErrorText="Значение от 5 до 50 символов"
+                                IsValidated="{x:Binding ValidationState[Text], Source={x:Reference CommentsPage}}" 
+                                TextValue="{x:Binding Text, Source={x:Reference CommentsPage}}"
+                                CanInput="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference CommentsPage}}"
+                                MinLenght="5" DefaultText="Введите комментарий" LabelText="Комментарий:"/>
+                            
+                            <ImageButton Grid.Column="1" Source="addicon.png" BorderColor="White" CornerRadius="10" BorderWidth="2" Grid.Row="0"
+                                Padding="5" HeightRequest="{OnIdiom Desktop=40, Phone=50}" Margin="0"
+                                BackgroundColor="{x:StaticResource FirstColor}" x:Name="AddCommentButton" Clicked="AddCommentButton_Clicked"
+                                IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference CommentsPage}}"/>
+                            <ImageButton Grid.Column="1" Source="deleteicon.png" BorderColor="White" CornerRadius="10" BorderWidth="2" Grid.Row="1"
+                                Padding="8" HeightRequest="{OnIdiom Desktop=40, Phone=50}" 
+                                BackgroundColor="{x:StaticResource FirstColor}" x:Name="DeleteCommentButton" Clicked="DeleteCommentButton_Clicked"
+                                IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference CommentsPage}}"/>
+                            
+                            <Grid ColumnDefinitions="0.7*, 0.3*" ColumnSpacing="10" Grid.Column="0" Grid.Row="1">
+                                <Slider Minimum="0" Maximum="50" x:Name="UnitValueSlider" MinimumTrackColor="White" ThumbColor="White" Margin="0, 10"
+                                    MaximumTrackColor="DarkSlateGrey" Grid.Column="0" ValueChanged="UnitValueSlider_ValueChanged"
+                                    IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference CommentsPage}}"/>
+                                <Label Grid.Column="1" FontSize="14" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center">
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <Span Text="Оценка: "/>
+                                            <Span Text="{Binding Rating, Source={x:Reference CommentsPage}, StringFormat='{0:F2}'}" />
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
                             </Grid>
-                            <VerticalStackLayout Spacing="5" Grid.Column="0" Grid.Row="1">
-                                <Border BackgroundColor="Transparent" Padding="2" Stroke="White" StrokeThickness="2">
-                                    <Border.StrokeShape>
-                                        <RoundRectangle CornerRadius="10" />
-                                    </Border.StrokeShape>
-                                    <Picker x:Name="CategoriesPicker" FontSize="15" WidthRequest="{OnIdiom Desktop=180, Phone=150}" HorizontalTextAlignment="Start"
-                                        SelectedIndexChanged="CategoriesPicker_SelectedIndexChanged"/>
-                                </Border>
-                            </VerticalStackLayout>
-                            <VerticalStackLayout Spacing="5" Grid.Column="1" Grid.Row="1">
-                                <Border BackgroundColor="Transparent" Padding="2" Stroke="White" StrokeThickness="2">
-                                    <Border.StrokeShape>
-                                        <RoundRectangle CornerRadius="10" />
-                                    </Border.StrokeShape>
-                                    <Picker x:Name="SortingTypePicker" FontSize="15" WidthRequest="{OnIdiom Desktop=180, Phone=150}" HorizontalTextAlignment="Start"
-                                        SelectedIndexChanged="SortingTypePicker_SelectedIndexChanged" />
-                                    
-                                </Border>
-                            </VerticalStackLayout>
 
                         </Grid>
                     </ScrollView>
                 </VerticalStackLayout>
             </Border>
-            <Grid x:Name="RecipesListPanel" Opacity="0.0" Scale="1.5" RowDefinitions="*" Grid.Row="1">
-                <VerticalStackLayout IsVisible="{x:Binding IsEmpty, Converter={StaticResource InvertedBoolConverter}}" Grid.Row="0">
-                    <ScrollView Orientation="Vertical" BackgroundColor="Transparent" x:Name="PageScroller" MaximumHeightRequest="360"
-                            IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}}" Margin="0, 10, 0, 0">
-                        <CollectionView x:Name="RecipesListView" ItemsSource="{Binding CookingRecipes}" HorizontalOptions="Fill"
-                                SelectionChanged="RecipesListView_SelectionChanged" SelectionMode="Single">
+            <Grid x:Name="CommentsListPanel" RowDefinitions="*" Grid.Row="1">
+                <VerticalStackLayout IsVisible="{x:Binding IsEmpty, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference CommentsPage}}" Grid.Row="0">
+                    <ScrollView Orientation="Vertical" BackgroundColor="Transparent" x:Name="PageScroller"
+                            IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference CommentsPage}}">
+                        <CollectionView x:Name="CommentsListView" ItemsSource="{Binding Comments, Source={x:Reference CommentsPage}}" 
+                                        HorizontalOptions="Fill" SelectionMode="Single">
                             <CollectionView.Resources>
                                 <ResourceDictionary>
                                     <toolkit:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageConverter" />
                                     <Style x:Key="CardBorderStyle" TargetType="Border">
                                         <Setter Property="StrokeThickness" Value="2"/>
                                         <Setter Property="BackgroundColor" Value="{x:StaticResource Key=FirstColor}"/>
-                                        <Setter Property="Margin" Value="16, 10"/>
+                                        <Setter Property="Margin" Value="24, 10"/>
                                         <Setter Property="Padding" Value="10"/>
                                         <Setter Property="StrokeShape">
                                             <Setter.Value>
@@ -129,12 +146,20 @@
                                                     </Border.Stroke>
                                                     <Image BackgroundColor="White" Aspect="AspectFill" HeightRequest="86" WidthRequest="86"
                                                         HorizontalOptions="Center" VerticalOptions="Center"  
-                                                        Source="{Binding Image, Converter={x:StaticResource ByteArrayToImageConverter}}"/>
+                                                        Source="{Binding Profile.Image, Converter={x:StaticResource ByteArrayToImageConverter}}"/>
                                                 </Border>
                                                 <StackLayout Grid.Column="1" Orientation="Vertical" Spacing="5" HorizontalOptions="Fill">
-                                                    <Label Text="{Binding Name}" TextColor="White" FontSize="18" 
-                                                        TextDecorations="Underline" LineBreakMode="TailTruncation"/>
-                                                    <Label Text="{Binding Description}" LineBreakMode="TailTruncation"/>
+                                                    <Label TextColor="White" FontSize="18" 
+                                                        TextDecorations="Underline" LineBreakMode="TailTruncation">
+                                                        <Label.FormattedText>
+                                                            <FormattedString>
+                                                                <Span Text="{x:Binding Profile.Name}" />
+                                                                <Span Text=" "/>
+                                                                <Span Text="{x:Binding Profile.Surname}" />
+                                                            </FormattedString>
+                                                        </Label.FormattedText>
+                                                    </Label>
+                                                    <Label Text="{Binding Text}" LineBreakMode="TailTruncation"/>
                                                     <HorizontalStackLayout Spacing="10">
                                                         <custom:RatingStarView 
                                                             NullIcon="starregular.png" ValueIcon="starsolid.png" MaxValue="5" Value="{x:Binding Rating}">
@@ -151,8 +176,7 @@
                                                     <Label FontSize="14" TextColor="White" LineBreakMode="TailTruncation">
                                                         <Label.FormattedText>
                                                             <FormattedString>
-                                                                <Span Text="Категория: "/>
-                                                                <Span Text="{Binding Category, StringFormat='{0:F2}'}" />
+                                                                <Span Text="{Binding PublicationTime}" />
                                                             </FormattedString>
                                                         </Label.FormattedText>
                                                     </Label>
@@ -164,9 +188,10 @@
                             </CollectionView.ItemTemplate>
                         </CollectionView>
                     </ScrollView>
+
                 </VerticalStackLayout>
                 <Border BackgroundColor="{x:StaticResource FirstColor}" Stroke="White" StrokeThickness="3" Padding="30" 
-                        HeightRequest="200" WidthRequest="200" IsVisible="{x:Binding IsEmpty}" Grid.Row="0"
+                        HeightRequest="200" WidthRequest="200" IsVisible="{x:Binding IsEmpty, Source={x:Reference CommentsPage}}" Grid.Row="0"
                         HorizontalOptions="Center" VerticalOptions="Center" Margin="0, 120">
                     <Border.StrokeShape>
                         <RoundRectangle CornerRadius="16" />
@@ -177,7 +202,6 @@
                             VerticalOptions="Center" HorizontalOptions="Center"/>
                     </VerticalStackLayout>
                 </Border>
-                
             </Grid>
             <Border BackgroundColor="{x:StaticResource FirstColor}" StrokeThickness="2" Stroke="White" Grid.Row="2" Padding="5">
                 <Border.StrokeShape>
@@ -185,13 +209,13 @@
                 </Border.StrokeShape>
                 <Grid ColumnDefinitions="*, *" RowDefinitions="*, *" ColumnSpacing="10" Margin="15, 10" RowSpacing="10">
                     <Label Grid.Row="0" HorizontalOptions="Center" FontSize="16" Grid.ColumnSpan="2" TextDecorations="Underline"
-                           FontAttributes="Bold" TextColor="White">
+                            FontAttributes="Bold" TextColor="White">
                         <Label.FormattedText>
                             <FormattedString>
                                 <Span Text="Страница: "/>
-                                <Span Text="{Binding PageIndex}"/>
+                                <Span Text="{Binding PageIndex, Source={x:Reference CommentsPage}}"/>
                                 <Span Text=" из "/>
-                                <Span Text="{Binding PageCount}"/>
+                                <Span Text="{Binding PageCount, Source={x:Reference CommentsPage}}"/>
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
@@ -202,7 +226,7 @@
                 </Grid>
             </Border>
         </Grid>
-
-        <custom:LoadingContentView IsLoading="{x:Binding IsLoading}" CancelCommand="{x:Binding CancelCommand}"/>
+        <custom:LoadingContentView IsLoading="{x:Binding IsLoading, Source={x:Reference CommentsPage}}" 
+                                   CancelCommand="{x:Binding CancelCommand, Source={x:Reference CommentsPage}}"/>
     </Grid>
 </ContentPage>
