--- a/MauiLabs.View/Pages/ProfilePages/FriendInfoPage.xaml
+++ b/MauiLabs.View/Pages/ProfilePages/FriendInfoPage.xaml
@@ -46,7 +46,7 @@
                     </Border.StrokeShape>
                     <VerticalStackLayout Spacing="5">
                         <Label Text="Изображение профиля:" TextColor="White" FontSize="18" Margin="4, 0, 0, 5" TextDecorations="Underline"/>
-                        <Grid RowDefinitions="*">
+                        <Grid RowDefinitions="*" ColumnDefinitions="0.6*, 0.4*">
                             <Border x:Name="ProfileImage" HeightRequest="120" WidthRequest="120" Stroke="White" 
                                     StrokeThickness="2" BackgroundColor="White" Grid.Column="0" Padding="0" Margin="0, 0, 0, 10">
                                 <Border.StrokeShape>
@@ -54,22 +54,19 @@
                                 </Border.StrokeShape>
                                 <Image Aspect="AspectFill" HeightRequest="120" WidthRequest="120"/>
                             </Border>
+                            <Grid RowDefinitions="*, *" ColumnDefinitions="*" Margin="5, 5" Grid.Column="1">
+                                <ImageButton Grid.Column="0" Grid.Row="1" Margin="3"
+                                     Source="deleteicon.png" Clicked="DeleteButton_Clicked" Style="{x:StaticResource ImageButtonStyle}"
+                                     IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference FriendPage}}"/>
+
+                                <ImageButton Grid.Column="1" Grid.Row="0" Margin="3"
+                                     Source="reloadicon.png" Clicked="RefreshButton_Clicked" Style="{x:StaticResource ImageButtonStyle}"
+                                     IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference FriendPage}}"/>
+                            </Grid>
+
                         </Grid>
                     </VerticalStackLayout>
                 </Border>
-                <Grid Margin="0, 5" ColumnDefinitions="*, *, *" RowDefinitions="*">
-                    <ImageButton Grid.Column="0" Grid.Row="0" Margin="3" WidthRequest="100"
-                            Source="deleteicon.png" Clicked="DeleteButton_Clicked" Style="{x:StaticResource ImageButtonStyle}"
-                            IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference FriendPage}}"/>
-
-                    <ImageButton Grid.Column="1" Grid.Row="0" Margin="3" WidthRequest="{OnIdiom Desktop=140, Phone=130}"
-                            Source="reloadicon.png" Clicked="RefreshButton_Clicked" Style="{x:StaticResource ImageButtonStyle}"
-                            IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference FriendPage}}"/>
-
-                    <ImageButton Grid.Column="2" Grid.Row="0" Margin="3" WidthRequest="100" Padding="8" HeightRequest="{OnIdiom Desktop=48, Phone=60}"
-                            Source="bookmark.png" Clicked="BookmarkButton_Clicked" Style="{x:StaticResource ImageButtonStyle}"
-                            IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference FriendPage}}"/>
-                </Grid>
                 <Border StrokeThickness="2" MaximumWidthRequest="400" Padding="20" BackgroundColor="{x:StaticResource Key=FirstColor}" 
                         Margin="0, 10, 0, 16" FlexLayout.AlignSelf="Stretch" Stroke="White">
                     <Border.StrokeShape>
@@ -116,6 +113,123 @@
 
                     </VerticalStackLayout>
                 </Border>
+                <Border StrokeThickness="2" MaximumWidthRequest="400" Padding="20" BackgroundColor="{x:StaticResource Key=FirstColor}" 
+        Margin="0, 10, 0, 10" FlexLayout.AlignSelf="Stretch" Stroke="White">
+                    <Border.StrokeShape>
+                        <RoundRectangle CornerRadius="20" />
+                    </Border.StrokeShape>
+                    <VerticalStackLayout Spacing="10">
+                        <Label Text="Список заметок:" TextColor="White" FontSize="18" Margin="10, 4" TextDecorations="Underline"/>
+                    </VerticalStackLayout>
+                </Border>
+                <Grid x:Name="BookmarksListPanel">
+                    <VerticalStackLayout IsVisible="{x:Binding IsEmpty, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference FriendPage}}">
+                        <ScrollView Orientation="Vertical" BackgroundColor="Transparent" x:Name="SecondScroller" HeightRequest="300"
+                                IsEnabled="{Binding IsLoading, Converter={StaticResource InvertedBoolConverter}, Source={x:Reference FriendPage}}" Margin="0, 10, 0, 0">
+                            <CollectionView x:Name="RecipesListView" ItemsSource="{Binding CookingRecipes, Source={x:Reference FriendPage}}" HorizontalOptions="Fill"
+                                    SelectionChanged="RecipesListView_SelectionChanged" SelectionMode="Single">
+                                <CollectionView.Resources>
+                                    <ResourceDictionary>
+                                        <toolkit:ByteArrayToImageSourceConverter x:Key="ByteArrayToImageConverter" />
+                                        <Style x:Key="CardBorderStyle" TargetType="Border">
+                                            <Setter Property="StrokeThickness" Value="2"/>
+                                            <Setter Property="BackgroundColor" Value="{x:StaticResource Key=FirstColor}"/>
+                                            <Setter Property="Margin" Value="16, 10"/>
+                                            <Setter Property="Padding" Value="10"/>
+                                            <Setter Property="StrokeShape">
+                                                <Setter.Value>
+                                                    <RoundRectangle CornerRadius="16" />
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Setter Property="Stroke">
+                                                <Setter.Value>
+                                                    <SolidColorBrush Color="White" />
+                                                </Setter.Value>
+                                            </Setter>
+                                            <Setter Property="HorizontalOptions" Value="Fill"/>
+                                            <Setter Property="HeightRequest" Value="120" />
+                                        </Style>
+                                    </ResourceDictionary>
+                                </CollectionView.Resources>
+
+                                <CollectionView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid>
+                                            <VisualStateManager.VisualStateGroups>
+                                                <VisualStateGroup Name="CommonStates">
+                                                    <VisualState Name="Normal" />
+                                                    <VisualState Name="Selected">
+                                                        <VisualState.Setters>
+                                                            <Setter Property="BackgroundColor" Value="Transparent" />
+                                                        </VisualState.Setters>
+                                                    </VisualState>
+                                                </VisualStateGroup>
+                                            </VisualStateManager.VisualStateGroups>
+                                            <Border Style="{StaticResource CardBorderStyle}">
+                                                <Grid ColumnSpacing="10">
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="Auto" />
+                                                        <ColumnDefinition Width="*" />
+                                                        <ColumnDefinition Width="Auto"/>
+                                                    </Grid.ColumnDefinitions>
+                                                    <Border Grid.Column="0" HeightRequest="90" WidthRequest="90" StrokeThickness="2">
+                                                        <Border.StrokeShape>
+                                                            <RoundRectangle CornerRadius="16" />
+                                                        </Border.StrokeShape>
+                                                        <Border.Stroke>
+                                                            <SolidColorBrush Color="White" />
+                                                        </Border.Stroke>
+                                                        <Image BackgroundColor="White" Aspect="AspectFill" HeightRequest="86" WidthRequest="86"
+                                                            HorizontalOptions="Center" VerticalOptions="Center"  
+                                                            Source="{Binding Image, Converter={x:StaticResource ByteArrayToImageConverter}}"/>
+                                                    </Border>
+                                                    <StackLayout Grid.Column="1" Orientation="Vertical" Spacing="5" HorizontalOptions="Fill">
+                                                        <Label Text="{Binding Name}" TextColor="White" FontSize="18" 
+                                                            TextDecorations="Underline" LineBreakMode="TailTruncation"/>
+                                                        <Label Text="{Binding Description}" LineBreakMode="TailTruncation"/>
+                                                        <HorizontalStackLayout Spacing="10">
+                                                            <custom:RatingStarView 
+                                                                NullIcon="starregular.png" ValueIcon="starsolid.png" MaxValue="5" Value="{x:Binding Rating}">
+                                                            </custom:RatingStarView>
+                                                            <Label FontSize="14" TextColor="White" LineBreakMode="TailTruncation">
+                                                                <Label.FormattedText>
+                                                                    <FormattedString>
+                                                                        <Span Text="Оценка: "/>
+                                                                        <Span Text="{Binding Rating, StringFormat='{0:F2}'}" />
+                                                                    </FormattedString>
+                                                                </Label.FormattedText>
+                                                            </Label>
+                                                        </HorizontalStackLayout>
+                                                        <Label FontSize="14" TextColor="White" LineBreakMode="TailTruncation">
+                                                            <Label.FormattedText>
+                                                                <FormattedString>
+                                                                    <Span Text="Категория: "/>
+                                                                    <Span Text="{Binding Category, StringFormat='{0:F2}'}" />
+                                                                </FormattedString>
+                                                            </Label.FormattedText>
+                                                        </Label>
+                                                    </StackLayout>
+                                                </Grid>
+                                            </Border>
+                                        </Grid>
+                                    </DataTemplate>
+                                </CollectionView.ItemTemplate>
+                            </CollectionView>
+                        </ScrollView>
+                    </VerticalStackLayout>
+                    <Border BackgroundColor="{x:StaticResource FirstColor}" Stroke="White" StrokeThickness="3" Padding="30" 
+                            HeightRequest="200" WidthRequest="200" IsVisible="{x:Binding IsEmpty, Source={x:Reference FriendPage}}"
+                            HorizontalOptions="Center" VerticalOptions="Center" Margin="0, 120">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="16" />
+                        </Border.StrokeShape>
+                        <VerticalStackLayout Spacing="10">
+                            <Image Source="nothing.png" HeightRequest="90" WidthRequest="90"/>
+                            <Label Text="Список пуст" FontSize="20" TextColor="White" BackgroundColor="Transparent" FontAttributes="Bold" 
+                                VerticalOptions="Center" HorizontalOptions="Center"/>
+                        </VerticalStackLayout>
+                    </Border>
+                </Grid>
             </StackLayout>
         </ScrollView>
         <custom:LoadingContentView IsLoading="{x:Binding IsLoading, Source={x:Reference FriendPage}}" 
